# shardy

./: .bazelrc  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: build_test_bazel.yml  buildifier.yml
docs/: 2024-03-14-shardy-partitioner-rfc.md  _toc.yaml  architecture.md  automatic_partitioner.md  compiler_api.md  dialect_agnostic_sharding.md  getting_started_jax.ipynb  getting_started_jax.md  getting_started_mydialect.md  overview.md  propagation.md  sdy_dialect.md  sdy_export_passes.md  sdy_import_passes.md  sdy_op_interfaces.md  sdy_propagation_passes.md  sharding_representation.md
docs/mpmd/: mpmd_common_passes.md  mpmd_dialect.md  mpmd_export_passes.md  mpmd_import_passes.md  mpmd_optimize_passes.md  mpmd_sharding_propagation_passes.md
rfcs/: 2024-03-14-shardy-partitioner-rfc.md  2025-06-18-mpmd-rfc-read-only-colab.ipynb  2025-06-18-mpmd-rfc.md
shardy/: BUILD  lit.bzl  lit.cfg.py  lit.site.cfg.py.in
shardy/common/: BUILD  file_utils.cc  file_utils.h  logging.cc  logging.h  save_module_op.cc  save_module_op.h
shardy/dialect/mpmd/: README
shardy/integrations/c/: BUILD  attributes.cc  attributes.h  (+4 more)
shardy/integrations/python/jax/mpmd/: BUILD  README.md  __init__.py  api.py  api_test.py  jax_mpmd_test.py  jaxlib_utils.py  jaxlib_utils_test.py  jit.py  jit_test.py  named_scope_location_test.py  ops.py  ops_test.py  partitioning_options.py  pipeline.py  pipeline_registry.py  pipeline_test.py  pyproject.toml  schedule_impl.py  stages.py  stages_test.py  test_utils.py  types.py  types_test.py  utils.py  utils_test.py
shardy/integrations/python/jax/mpmd/jaxlib/: BUILD  mpmd_program.cc  mpmd_program.h  throw_error.h
shardy/round_trip_import/: BUILD  README.md  constants.h  import_backend_func_calls.cc  import_backend_func_calls.h  import_callback_custom_calls.cc  import_callback_custom_calls.h  import_constants.cc  import_constants.h  import_sdy_custom_calls.cc  import_sdy_custom_calls.h  import_shardy_attrs.cc  import_shardy_attrs.h  import_uninlineable_func_calls.cc  import_uninlineable_func_calls.h  open_while_free_vars_sharding.cc  open_while_free_vars_sharding.h  pipelines.cc  pipelines.h  remove_size_one_axes.cc  remove_size_one_axes.h  shard_map_import.cc  shard_map_import.h  stablehlo_prepare_for_hlo_export.cpp  utils.cc  utils.h
shardy/tools/: BUILD  mpmd_opt_main.cc  sdy_opt_main.cc  sdy_translate_main.cc
(+703 files in other folders)
